<resources>
    <string name="app_name">Best Movie In 2018</string>
    <string name="tv_genre">Genre</string>
    <string name="tv_judul">Judul</string>
    <string name="tv_ph">PH</string>
    <string name="tv_tahun">Tahun</string>
    <string name="tv_tanggal">Tanggal</string>
    <string name="tv_overview">Overview</string>
    <string name="img_cover">Cover</string>
    <string name="img_rating">rating</string>
    <string name="tv_rating">Rating</string>
    <string name="img_time">time</string>
    <string name="tv_waktu">Waktu</string>
    <string name="tv_aktor">Pemeran</string>

    <string-array name="data_judul">
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Venom</item>
    </string-array>

    <string-array name="data_genre">
        <item>Action</item>
        <item>Action</item>
        <item>Drama</item>
        <item>Action</item>
        <item>Thriller</item>
        <item>Action</item>
        <item>Fantasy</item>
        <item>Comedy</item>
        <item>Action</item>
        <item>Action</item>
    </string-array>

    <string-array name="data_ph">
        <item>Warner Bros.</item>
        <item>Marvel Studios</item>
        <item>20th Century Fox</item>
        <item>Paramount</item>
        <item>Blumhouse Productions</item>
        <item>G-BASE</item>
        <item>Universal Studio</item>
        <item>MNC Pictures</item>
        <item>Appian Way</item>
        <item>Columbia Pictures</item>
    </string-array>

    <string-array name="data_tahun">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>

    <string-array name="data_tanggal">
        <item>December 21, 2018</item>
        <item>April 27, 2018</item>
        <item>November 2, 2018</item>
        <item>December 21, 2018</item>
        <item>January 18, 2019</item>
        <item>October 26, 2018</item>
        <item>December 14, 2018</item>
        <item>January 17, 2019</item>
        <item>November 21, 2018</item>
        <item>October 5, 2018</item>
    </string-array>

    <string-array name="data_overview">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d etat is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>After three years, the business of Muslihat (Epi Kusnandar), who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira (Safira Maharani), her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>

    <string-array name="data_cover">
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_venom</item>
    </string-array>

    <string-array name="data_rating">
        <item>68%</item>
        <item>83%</item>
        <item>81%</item>
        <item>65%</item>
        <item>65%</item>
        <item>63%</item>
        <item>60%</item>
        <item>65%</item>
        <item>58%</item>
        <item>66%</item>
    </string-array>

    <string-array name="data_waktu">
        <item>144 m</item>
        <item>149 m</item>
        <item>135 m</item>
        <item>114 m</item>
        <item>129 m</item>
        <item>122 m</item>
        <item>129 m</item>
        <item>94 m</item>
        <item>116 m</item>
        <item>112 m</item>
    </string-array>

    <string-array name="data_aktor">
        <item>Jason Momoa as Arthur Curry\n
            Amber Heard as Mera\n
            Willem Dafoe as Nuidis Vulko</item>
        <item>Robert Downey Jr. as Tony Stark\n
            Chris Hemsworth as Thor\n
            Chris Evans as Steve Rogers</item>
        <item>Rami Malek as Freddie Mercury\n
            Gwilym Lee as Brian May\n
            Ben Hardy as Roger Taylor</item>
        <item>Hailee Steinfeld as Charlie Watson\n
            Jorge Lendeborg Jr. as Memo\n
            Pamela Adlon as Sally Watson</item>
        <item>James McAvoy as Kevin Wendell Crumb\n
            Bruce Willis as David Dunn\n
            Samuel L. Jackson as Elijah Prince</item>
        <item>Gerard Butler as Captain Joe Glass\n
            Toby Stephens as Bill Beaman\n
            Common as RA John Fisk</item>
        <item>Hera Hilmar as Hester Shaw\n
            Robert Sheehan as Tom Natsworthy\n
            Jihae as Anna Fang</item>
        <item>Epy Kusnandar as Kang Mus\n
            Tya Arifin as Kinanti\n
            Soraya Rasyid as Imas</item>
        <item>Taron Egerton as Robin\n
            Jamie Foxx as Yahya\n
            Jamie Dornan as Will Scarlet</item>
        <item>Tom Hardy as Eddie Brock / Venom\n
            Michelle Williams as Anne Weying\n
            Riz Ahmed as Carlton Drake / Riot</item>
    </string-array>
</resources>
