<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ItemDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/img_photo"
            android:src="@color/colorAccent"
            android:scaleType="centerInside"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:contentDescription="@string/img_cover" />

        <TextView
            android:id="@+id/tv_judul"
            android:maxLines="3"
            android:layout_toEndOf="@id/img_photo"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:text="@string/tv_genre"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@id/tv_judul"
            android:layout_toEndOf="@id/img_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_ph"
            android:text="@string/tv_ph"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_below="@id/tv_genre"
            android:layout_toEndOf="@id/img_photo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_tanggal"
            android:text="@string/tv_tanggal"
            android:textSize="16sp"
            android:layout_below="@id/tv_ph"
            android:layout_toEndOf="@id/img_photo"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/ic_star_black_24dp"
            android:id="@+id/img_star"
            android:layout_marginStart="26dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/img_photo"
            android:layout_below="@id/tv_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_rating" />

        <TextView
            android:id="@+id/tv_rating"
            android:text="@string/tv_rating"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginStart="26dp"
            android:layout_below="@id/img_star"
            android:layout_toEndOf="@id/img_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/ic_timer_24dp"
            android:id="@+id/img_time"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/img_star"
            android:layout_below="@id/tv_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_time" />

        <TextView
            android:id="@+id/tv_time"
            android:text="@string/tv_waktu"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginStart="24dp"
            android:layout_below="@id/img_time"
            android:layout_toEndOf="@id/img_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_aktor_judul"
            android:text="@string/tv_aktor"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/img_photo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_aktor"
            android:background="#EEEFF4"
            android:text="@string/tv_aktor"
            android:textSize="18sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:layout_below="@id/tv_aktor_judul"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_deskripsi_judul"
            android:text="@string/tv_overview"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/tv_aktor"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_deskripsi"
            android:background="#EEEFF4"
            android:text="@string/tv_overview"
            android:textSize="18sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:layout_below="@id/tv_deskripsi_judul"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</ScrollView>
